---
source: compiler-core/src/parse/tests.rs
assertion_line: 945
expression: "\nfn main() {\n    <<72, 101, 108, 108, 111, 44, 32, 74, 111, 101, const>>\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:3:53
  │
3 │     <<72, 101, 108, 108, 111, 44, 32, 74, 111, 101, const>>
  │                                                     ^^^^^ I was not expecting this

Found the keyword `const`, expected one of: 
- `>>`
- a bit array segment
